[package]
name = "megahx8"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "m68k")'.dependencies]
embedded-alloc = "0.6"
critical-section = { version = "1.0", features = ["restore-state-bool"] }
[dependencies]
heapless = { version = "0.8.0", features = ["ufmt"] }
itoa = "1"
ufmt = "0.2.0"
