[package]
name = "mimic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
